# klondike

./: CMakeLists.txt  README.md  klondike.cpp
src/: Card.cpp  Card.hpp  Deck.cpp  Deck.hpp  Foundation.cpp  Foundation.hpp  Game.cpp  Game.hpp  Stack.cpp  Stack.hpp  test.cpp
tests/: test.cpp  testCard.cpp  testFoundation.cpp  testGame.cpp  testStack.cpp
